HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncDiagnosticsSupplement/Expected.uv
//! Expected diagnostic metadata for the AsyncDiagnosticsSupplement rejected-source specimen.

expectedDiagnostic("E-CON-0230", "diagnostics.21.AsyncDiagnosticsSupplement")
